fix: initial dark mode

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -1452,7 +1452,7 @@ p.lead {
     background-image: linear-gradient($background, transparent, $background);
     h1 {
       margin-bottom: 0;
-      color: $text;
+      color: #fff;
     }
     p {
       color: $text;
@@ -3409,7 +3409,7 @@ i.font60 {
       background: none;
       text-decoration: none;
       color: $gray;
-      border: 1px solid rgba(255, 255, 255, 0.1);
+      border: 1px solid $border;
       font-size: 15px;
       cursor: poInter;
       -webkit-border-radius: 3px;
